# pyhypixel

./: .gitignore  README.md  pyproject.toml
pyhypixel/: hypixel_api.py
pyhypixel/interfaces/: api.py
pyhypixel/req/: player_data.py  resources.py  skyblock.py
pyhypixel/types/err/: error.py
pyhypixel/types/models/: error.py
pyhypixel/types/models/Housing/: __init__.py  active.py  house.py  houses.py
pyhypixel/types/models/Other/: __init__.py  boosters.py  counts.py  leaderboards.py  punishment_stats.py
pyhypixel/types/models/PlayerData/: __init__.py  guild.py  player.py  recent_games.py  status.py
pyhypixel/types/models/Resources/: __init__.py  achievements.py  challenges.py  games.py  guild_achievements.py  quests.py  vanity_companions.py  vanity_pets.py
pyhypixel/types/models/Skyblock/: __init__.py  auction.py  auctions.py  auctions_ended.py  bazaar.py  bingo.py  collections.py  election_and_mayor.py  firesales.py  garden.py  items.py  museum.py  news.py  profile.py  profiles.py  resource_bingo.py  skills.py
pyhypixel/utils/: __init__.py  async_req.py  model_validate.py
test/: test.json  test.py  thought.py
