[project]
name = "pyhypixel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "pydantic>=2.11.7",
    "requests>=2.32.4",
    "yarl>=1.20.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
